; ModuleID = '/home/carl/AnghaBench/sway/swaybar/extr_input.c_wl_pointer_motion.c'
source_filename = "/home/carl/AnghaBench/sway/swaybar/extr_input.c_wl_pointer_motion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl_pointer = type { i32 }
%struct.swaybar_seat = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_pointer*, i32, i32, i32)* @wl_pointer_motion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wl_pointer_motion(i8* %0, %struct.wl_pointer* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca %struct.wl_pointer*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.swaybar_seat*, align 8
  store i8* %0, i8** %6, align 8
  store %struct.wl_pointer* %1, %struct.wl_pointer** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.swaybar_seat*
  store %struct.swaybar_seat* %13, %struct.swaybar_seat** %11, align 8
  %14 = load i32, i32* %9, align 4
  %15 = call i8* @wl_fixed_to_int(i32 %14)
  %16 = load %struct.swaybar_seat*, %struct.swaybar_seat** %11, align 8
  %17 = getelementptr inbounds %struct.swaybar_seat, %struct.swaybar_seat* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  store i8* %15, i8** %18, align 8
  %19 = load i32, i32* %10, align 4
  %20 = call i8* @wl_fixed_to_int(i32 %19)
  %21 = load %struct.swaybar_seat*, %struct.swaybar_seat** %11, align 8
  %22 = getelementptr inbounds %struct.swaybar_seat, %struct.swaybar_seat* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i8* %20, i8** %23, align 8
  ret void
}

declare dso_local i8* @wl_fixed_to_int(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
